Changes correct flex alignment for .left-panel

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body > div {
     display: flex;
     justify-content: center;
     align-items: stretch;
-    width: 100vh;
+    width: 100%;
 }
 
 .left-panel {
@@ -14,27 +14,30 @@ body > div {
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
-    width: 500px;
+    width: 50%;
     flex: 1 1 auto;
     
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: stretch;
 
+
     color: white;
+    text-align: center;
 }
 
 .left-panel h1 {
     background-color: rgb(0 0 0 / 0.3);
-    text-align: center;
     padding: 0.5em;
+    margin-top: 40%;
 }
+
 
 .right-panel {
     flex: 1 1 auto;
     height: 100vh;
-    width: 500px;
+    width: 50%;
     background-color: #f9fafb;
 
     display: flex;
